charts/guac/supply-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplychain-api
  labels:
    app: oes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oes
      component: supplychain-api
  template:
    metadata:
      labels:
        app: oes
        component: supplychain-api
    spec:
      volumes:
        - name: supply-volume
          configMap:
            name: supply-volume
            items:
              - key: app-config.yaml
                path: app-config.yaml
            defaultMode: 420
      containers:
        - name: supplychain-api
          image: quay.io/opsmxpublic/supplychain-api:v0.0.1
          ports:
            - containerPort: 8099
              protocol: TCP
          volumeMounts:
            - name: supply-volume
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
