charts/guac/supplychain-preprocessor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplychain-preprocessor
  labels:
    app: oes
    component: supplychain-preprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oes
      component: supplychain-preprocessor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oes
        component: supplychain-preprocessor
    spec:
      containers:
      - name: supplychain-preprocessor
        image: shraddhaopsmx/supplychain-preprocessor:v1.64
        ## Add liveness and readiness 
        resources: {}
        volumeMounts:
        - mountPath: /etc/config
          name: preprocessor-volume
      imagePullSecrets:
        - name: opsmx11-secret
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: preprocessor-volume
        configMap:
          name: supplychain-preprocessor-cm
      securityContext:
        runAsNonRoot: true
