charts/guac/ssdui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-spin-ssd-spin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: oes-ui-ingress
spec:
  rules:
  - host: ssd-ui.ds.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: oes-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ssd-ui.ds.opsmx.org
    secretName: oes-ui-ingress
